--- a/css/solucoeshtml.css
+++ b/css/solucoeshtml.css
@@ -131,7 +131,7 @@ body {
 .mainBox {
 	padding:5px 10px 5px 10px;
 	margin:30px 1% 10px ;
-
+	display:inline-block;
 	min-height:640px;
 	width:480px;
 	background-color:#CCCCCC;
