--- a/css/uteishtml.css
+++ b/css/uteishtml.css
@@ -262,6 +262,7 @@ body {
 		min-height:490px;
 		width:90%;
 		max-width:800px;
+		min-width:640;
 		background-color:#CCCCCC;
 		box-shadow:-2px 2px #555555;
 		border: 1px SOLID #555555;
