--- a/css/uteishtml.css
+++ b/css/uteishtml.css
@@ -134,7 +134,8 @@ body {
 	margin:10px;
 	display:inline-block;
 	min-height:300px;
-	min-width:90%;
+	min-width:100%;
+	max-width:100%;
 	background-color:#CCCCCC;
 	box-shadow:-2px 2px #555555;
 	border: 1px SOLID #555555;
